Fixed scrollbar-gutter, force.dyamic issues.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,9 @@
   * {
     @apply border-border box-border;
   }
+  html {
+    overflow-y: scroll;
+  }
   body {
     @apply bg-background text-foreground antialiased;
     font-feature-settings: "rlig" 1, "calt" 1;
